--- a/templates/_ajax-feedback/haendler.twig
+++ b/templates/_ajax-feedback/haendler.twig
@@ -202,7 +202,7 @@ pageid          => ID der "Content Page" Seite welches über das entprechende Mo
 
                      {% if haendlerMail != '' %}
                      <div class="artikelContentMail" style="background-color: pink">
-                         <a data-email="{{ haendlerMailData }}">E-Mail schreiben</a>
+                         <a target="_blank" data-email="{{ haendlerMailData }}">E-Mail schreiben</a>
                      {% endif %}
 
 
