--- a/assets/sccs/_general.scss
+++ b/assets/sccs/_general.scss
@@ -1,5 +1,90 @@
 // Layoutbezogene Styles der Website
 
+
+body{
+
+  &.green, &.blue {
+
+        background-repeat: no-repeat;
+        background-position: top 170px right 140px;
+        @include wl-breakpoint($page-width) {
+          background-position: top 170px right 7.3vw;
+        }
+        @include wl-breakpoint(600) {
+          background-position: top 170px right 8.5vw;
+        }
+        @include wl-breakpoint(400) {
+          background-position: top 170px right 7vw;
+        }
+
+        @include wl-breakpoint(1500) {
+          @include dynamic-background-size(400, 830, height);
+          @include dynamic-background-size(400, 830, width);
+        }
+
+        @include wl-breakpoint(700) {
+          @include dynamic-background-size(250, 1100, height);
+          @include dynamic-background-size(250, 1100, width);
+          @include dynamic-distance(170, 450, background-position-y);
+        }
+
+        @include wl-breakpoint(370) {
+          @include dynamic-background-size(200, 1290, height);
+          @include dynamic-background-size(200, 1290, width);
+        }
+
+  }
+
+
+  &.green{
+    background-image: url("/assets/images/img/bg-kreis-green.svg");
+  }
+
+  &.blue{
+    background-image: url("/assets/images/img/bg-kreis-blue.svg");
+  }
+
+  /* =============================================================== */
+
+
+  &.home{
+    background-repeat: no-repeat;
+    background-image: url("/assets/images/img/bg-kreis-home.svg");
+
+    background-position: top 236px left 140px;
+    @include wl-breakpoint($page-width) {
+      background-position: top 236px left 7.3vw;
+      @include dynamic-distance(150, 236, background-position-y);
+    }
+    @include wl-breakpoint(600) {
+      background-position: top 236px left 8.5vw;
+    }
+    @include wl-breakpoint(400) {
+      background-position: top 236px left 7vw;
+    }
+
+    @include wl-breakpoint(1500) {
+      @include dynamic-background-size(400, 1130, height);
+      @include dynamic-background-size(400, 1130, width);
+      @include dynamic-distance(170, 198, background-position-y);
+    }
+
+    @include wl-breakpoint(700) {
+      @include dynamic-background-size(250, 1100, height);
+      @include dynamic-background-size(250, 1100, width);
+      //@include dynamic-distance(170, 450, background-position-y);
+    }
+
+    @include wl-breakpoint(370) {
+      @include dynamic-background-size(200, 1290, height);
+      @include dynamic-background-size(200, 1290, width);
+    }
+
+
+  }
+
+}
+
 .content-grid{
   display: grid;
   grid-template-columns: repeat(12,1fr);
