--- a/assets/sccs/components/_header.scss
+++ b/assets/sccs/components/_header.scss
@@ -1,5 +1,4 @@
 #header {
-  background-color: #ffffff;
   position: relative;
   width: 100%;
   z-index: 10;
@@ -22,6 +21,11 @@ header {
     grid-row: 1;
     grid-column-start: 2;
     grid-column-end: 12;
+
+    @include wl-breakpoint(500) {
+      grid-column-start: 1;
+      grid-column-end: 13;
+    }
 
     .nav-container{
 
@@ -164,7 +168,7 @@ header {
                           text-transform: uppercase;
 
                           &.buttonHaendlrtFinden{
-                              @include btn($wl-color-white, $wl-color-blue-dark,$wl-color-orange, $wl-color-orange, $wl-color-white, $wl-color-orange)
+                              @include btn(transparent, $wl-color-blue-dark,$wl-color-orange, $wl-color-orange, $wl-color-white, $wl-color-orange)
                           }
                         }
 
