--- a/assets/sccs/core/_mixin.scss
+++ b/assets/sccs/core/_mixin.scss
@@ -250,6 +250,7 @@
 	padding-right: 20px;
 	border-radius: 30px;
 	color: $textColor;
+	background-color: $bgColor;
 	text-decoration: none;
 	border: 2px solid $borderColor;
 	transition: all .3s;
