--- a/templates/_include-introblock-components/intromodul_startseite.twig
+++ b/templates/_include-introblock-components/intromodul_startseite.twig
@@ -1,29 +1,31 @@
 {# ###################################################################################################### #}
 {% set settings = {
-    '0-1300' : {
-        'size' : '920x900',
+    '0-1500' : {
+        'size' : '1060x327',
         'mode' : 'crop'
     },
-    '0-1000' : {
-        'size' : '920x900',
+    '1-1200' : {
+        'size' : '850x263',
         'mode' : 'crop'
     },
-    '0-700' : {
-        'size' : '920x900',
+    '2-900' : {
+        'size' : '640x198',
         'mode' : 'crop'
     },
-    '0-500' : {
-        'size' : '920x900',
+    '3-700' : {
+        'size' : '500x145',
         'mode' : 'crop'
-    }
-    ,
-    '0-400' : {
-        'size' : '920x900',
+    },
+    '4-500' : {
+        'size' : '415x128',
         'mode' : 'crop'
-    }
+    },
+    '5-300' : {
+        'size' : '345x107',
+        'mode' : 'crop'
+    },
 } %}
 {% set image = block.bild.one()|default(false) %}
-{% set buttonClass = 'btn btn-js' %}
 {# -------------- Macro -------------- #}
 {% import "_include-core/macros.twig" as _self %}
 {# ###################################################################################################### #}
@@ -31,18 +33,44 @@
 
     <div class="grid-container content-grid-12">
 
-            <div class="containerText-headline">
-                <h1>{{ block.headline | nl2br  }}</h1>
+            <div class="containerText-claim">
+                {{ block.claim }}
             </div>
 
-            <div class="containerText-body text">
-                {{ block.text }}
+            <div class="containerText-headline">
+                <h1 class="home">{{ block.headline | nl2br  }}</h1>
+            </div>
+
+            <div class="containerText-body">
+
+                <div class="text">
+                    {{ block.text }}
+                </div>
+                
+                <div class="buttonIntro">
+                    <span class="buttonIntro1">
+                    {% set button1 = block.button1|default(false) %}{% if button1 %}
+                        {{ _self.linkList( button1, 'btn' ) | trim | raw  }}
+                    {% endif %}
+                    </span>
+                    <span class="buttonIntro2">
+                    {% set button2 = block.button2|default(false) %}{% if button2 %}
+                            {{ _self.linkList( button2, 'btn' ) | trim | raw  }}
+                        {% endif %}
+                    </span>
+                    <span class="buttonIntro3">
+                    {% set button3 = block.button3|default(false) %}{% if button3 %}
+                        {{ _self.linkList( button3, 'btn' ) | trim | raw  }}
+                    {% endif %}
+                    </span>
+                </div>
+
             </div>
 
             <div class="containerBild">
                 {% if image %}
                     <div class="introbild">
-                    {% include '_include-vendor/image-picture' with {class: 'intro-img', sourceMediaSettings: settings, image: image, imageSize: '920x900', imageMode: 'crop'} %}
+                    {% include '_include-vendor/image-picture' with {class: 'intro-img', sourceMediaSettings: settings, image: image, imageSize: '1360x420', imageMode: 'crop'} %}
                     </div>
                 {% endif %}
             </div>
